--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = atmelavr
 lib_extra_dirs = ~/Documents/Arduino/libraries
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
+
