--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ lib_extra_dirs = ~/Documents/Arduino/libraries
 board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
-
+lib_deps = dfrobot/DFRobotDFPlayerMini@^1.0.6
