--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/Users/scotteaton/Documents/Trains/BaseStation-master/DCCpp_Mega_MZ/.pio/build/megaatmega2560/firmware.elf",
+            "executable": "/Users/scotteaton/Documents/Trains/Sketches (Latest)/BaseStation-master/DCCpp_Mega_MZ/.pio/build/megaatmega2560/firmware.elf",
             "projectEnvName": "megaatmega2560",
             "toolchainBinDir": "/Users/scotteaton/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/Users/scotteaton/Documents/Trains/BaseStation-master/DCCpp_Mega_MZ/.pio/build/megaatmega2560/firmware.elf",
+            "executable": "/Users/scotteaton/Documents/Trains/Sketches (Latest)/BaseStation-master/DCCpp_Mega_MZ/.pio/build/megaatmega2560/firmware.elf",
             "projectEnvName": "megaatmega2560",
             "toolchainBinDir": "/Users/scotteaton/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/Users/scotteaton/Documents/Trains/BaseStation-master/DCCpp_Mega_MZ/.pio/build/megaatmega2560/firmware.elf",
+            "executable": "/Users/scotteaton/Documents/Trains/Sketches (Latest)/BaseStation-master/DCCpp_Mega_MZ/.pio/build/megaatmega2560/firmware.elf",
             "projectEnvName": "megaatmega2560",
             "toolchainBinDir": "/Users/scotteaton/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
